fix some broken styles on homepage zones and also archive featured items

--- a/sass/02_molecule/_m-post-image.scss
+++ b/sass/02_molecule/_m-post-image.scss
@@ -6,3 +6,7 @@
 	margin-bottom: 20px;
 	margin-right: 20px;
 }
+.m-archive-top.m-archive-has-1-post .m-post-image {
+	float: none;
+	margin: 0;
+}
